[package]
name = "petgraph-cluster"
version = "0.1.0"
authors = ["rrcwang <15862033+rrcwang@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"petgraph" = "0.5.1"
"rand" = "0.8.3"
"serde_json" = "1.0.64"